<resources>
    <string name="app_name">Asistes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_results_data">Результаты поиска</string>
    <string name="title_activity_product_card">Карточка товара</string>

    <string name="button_search_title">Найти</string>
    <string name="button_request_title">Сделать запрос</string>

    <string name="product_artikul">Артикул:</string>
    <string name="product_price">Цена:</string>
    <string name="product_count">В наличии:</string>
    <string name="product_seller">Продавец:</string>
    <string name="product_available">Добавлено:</string>
    <string name="products_results">Найдено товаров:</string>

    <string name="brand">Марка:</string>
    <string name="model">Модель:</string>
    <string name="modifiction">Модификация:</string>
    <string name="year">Год:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt">Не выбрано</string>


</resources>
